# zenoh-backend-influxdb

./: .markdownlint.yaml  Cargo.toml  Cross.toml  Jenkinsfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
v1/: Cargo.toml  EXAMPLE_CONFIG.json5  README.md
v1/src/: lib.rs
v2/: Cargo.toml  EXAMPLE_CONFIG.json5  README.md
v2/src/: lib.rs
zenoh-backend-influxdb/: Cargo.toml
zenoh-backend-influxdb-v1/: Cargo.toml  README.md
zenoh-backend-influxdb-v2/: Cargo.toml  README.md
zenoh-backend-influxdb-v2/src/: lib.rs
zenoh-backend-influxdb2/: Cargo.toml
zenoh-backend-influxdb2/src/: lib.rs
