[workspace]
members = [ "v1", "v2" ]
resolver = "1"

[workspace.package]
version = "0.11.0-dev-92-g743081c"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-influxdb"
homepage = "http://zenoh.io"
authors = [ "kydos <angelo@icorsaro.net>", "Julien Enoch <julien@enoch.fr>", "Olivier Hécart <olivier.hecart@zettascale.tech>", "Luca Cominardi <luca.cominardi@zettascale.tech>", "Sreeja Nair <sreeja.nair@zettascale.tech>", "Snehil Joshi <snehil.joshi@zettascale.tech>" ]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = [ "network-programming", "database" ]
description = "Backend for Zenoh using InfluxDB"

[workspace.dependencies]
async-std = "1.12.0"
async-trait = "0.1.66"
base64 = "0.21.0"
git-version = "0.3.5"
lazy_static = "1.4.0"
serde_json = "1.0.94"
tracing = "0.1"

[workspace.dependencies.serde]
version = "1.0.154"
features = [ "derive" ]

[workspace.dependencies.uuid]
version = "1.3.0"
features = [ "v4" ]

[workspace.dependencies.zenoh]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"
features = [ "unstable" ]

[workspace.dependencies.zenoh_backend_traits]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-plugin-trait]
version = "0.11.0-dev"
git = "htttps://github.com/eclipse-zenoh/zenoh"
branch = "main"

[workspace.dependencies.zenoh-collections]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-core]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"

[workspace.dependencies.zenoh-util]
version = "0.11.0-dev"
git = "https://github.com/eclipse-zenoh/zenoh.git"
branch = "main"