#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[workspace]
members = ["v1", "v2"]
resolver = "1"


[workspace.package]
version = "1.0.0-dev-43-g715cbd4"
repository = "https://github.com/eclipse-zenoh/zenoh-backend-influxdb"
homepage = "http://zenoh.io"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@zettascale.tech>",
    "Luca Cominardi <luca.cominardi@zettascale.tech>",
    "Sreeja Nair <sreeja.nair@zettascale.tech>",
    "Snehil Joshi <snehil.joshi@zettascale.tech>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming", "database"]
description = "Backend for Zenoh using InfluxDB"

[workspace.dependencies]
async-trait = "0.1.66"
base64 = "0.21.0"
git-version = "0.3.5"
lazy_static = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.35.1", default-features = false } # Default features are disabled due to some crates' requirements
tracing = "0.1"
uuid = { version = "1.3.0", features = ["v4"] }
zenoh = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
    "unstable",
    "internal",
    "plugins"
] }
zenoh_backend_traits = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
zenoh-plugin-trait = { version = "1.0.0-dev", git = "htttps://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
