[package]
name = "zenoh-backend-influxdb-v1"
description = "Backend for Zenoh using InfluxDB v1.x"

[package.version]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.categories]
workspace = true

[package.metadata]
[package.metadata.deb]
name = "zenoh-backend-influxdb-v1"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = [ "../LICENSE", "0" ]
depends = "zenoh-plugin-storage-manager (=0.11.0-dev-68-g2d29cce)"

[lib]
name = "zenoh_backend_influxdb"
crate-type = [ "cdylib", "rlib" ]

[features]
stats = [ "zenoh/stats" ]

[dependencies]
humantime = "2.1.0"

[dependencies.async-std]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.influxdb]
version = "0.7.1"
default-features = false
features = [ "derive", "use-serde", "h1-client-rustls" ]

[dependencies.lazy_static]
workspace = true

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.zenoh]
workspace = true

[dependencies.zenoh_backend_traits]
workspace = true

[dependencies.zenoh-collections]
workspace = true

[dependencies.zenoh-core]
workspace = true

[dependencies.zenoh-util]
workspace = true

[dependencies.zenoh-plugin-trait]
workspace = true

[build-dependencies]
rustc_version = "0.4.0"