[package]
name = "zenoh-backend-influxdb-v1"
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
description = "Backend for Zenoh using InfluxDB v1.x"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zenoh_backend_influxdb"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]
dynamic_plugin = []
default = ["dynamic_plugin"]


[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
git-version = { workspace = true }
humantime = "2.1.0"
influxdb = { version = "0.7.1", default-features = false, features = [
    "derive",
    "use-serde",
    "h1-client-rustls",
] }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true, features = ["unstable", "internal", "plugins"] }
zenoh-plugin-trait = { workspace = true }
zenoh_backend_traits = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-influxdb-v1"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=0.11.0-dev-1)"
