[package]
name = "zenoh-backend-influxdb-v2"
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
description = "Backend for Zenoh using InfluxDB v2.x"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zenoh_backend_influxdb2"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]


[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = { workspace = true }
futures = "0.3.28"
git-version = { workspace = true }
humantime = "2.1.0"
influxdb2 = { version = "0.4.5", features = [
    "rustls",
], default-features = false }
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2"
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = "0.2"
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true }
zenoh_backend_traits = { workspace = true }
zenoh-collections = { workspace = true }
zenoh-core = { workspace = true }
zenoh-util = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-influxdb-v2"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=0.11.0-dev-1)"
