[package]
name = "zenoh-backend-influxdb-v2"
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
description = "Backend for Zenoh using InfluxDB v2.x"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zenoh_backend_influxdb2"
crate-type = ["cdylib", "rlib"]

[features]
stats = ["zenoh/stats"]
dynamic_plugin = []
default = ["dynamic_plugin"]

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"
git-version = { workspace = true }
influxdb2 = { version = "0.4.5", features = [
    "rustls",
], default-features = false }
influxdb2-derive = "0.1.1"
influxdb2-structmap = "0.2"
lazy_static = { workspace = true }
num-traits = "0.2"
rand = "0.8.5"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true, features = ["unstable", "internal", "plugins"] }
zenoh_backend_traits = { workspace = true }
zenoh-plugin-trait = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.deb]
name = "zenoh-backend-influxdb-v2"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2022 ZettaScale Technology"
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenoh-plugin-storage-manager (=1.0.0~alpha.4-1)"
